# rag-chatbot

./: .env.sample  .gitignore  FunctionCalling_engine.py  baseline.ipynb  build_vector_db.py  cardnews_summarizer.py  config.yaml.example  law_parser.py  main.py  momcafe_crawler.py  momcafe_crawler_adjust.py  momcafe_data_2.csv  pdf_image_cropper.py  pyproject.toml  rag_engine.py  summarize_images.py  temp.py  tmp.ipynb  vectorDB.py
agent/: 정리.ipynb
crawler/: momcafe_crawler.py  momcafe_crawler_adjust.py
data/: momcafe_data_1.csv
notebooks/: experiment1.ipynb  experiment2.ipynb  experiment3.ipynb  pdf_ingestion_experiment.ipynb  정리.ipynb
notebooks/.gradio/flagged/: dataset1.csv
rag/: 정리.ipynb
src/: __init__.py  main.py
src/agents/: agent_factory.py
src/data_processing/: __init__.py  law_parser.py
src/enums/: __init__.py  domain_enum.py
src/graph_factory/: graph_router.py
src/nodes/: common_nodes.py
src/prompts/: __init__.py  gender_prompts.py  insurance_prompts.py  labor_prompts.py
src/retrievers/: __init__.py  gender_retriever.py  insurance_retriever.py  labor_retriever.py
src/router/: __init__.py  domain_router.py
src/state_models/: __init__.py  common_models.py  common_state.py  employment_insurance_state.py  gender_equality_state.py  labor_standards_state.py
src/vector_db/: create_vector_db.py  vector_store.py
질문관련_jupyter_code/: DM_웹크롤링 .ipynb  DM_전처리(konlpy 수행).ipynb  DM_텍스트마이닝_최종.ipynb  SNA연습.csv
